// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthWall> renders a message for unauthorized users 1`] = `
<span>
  You are not authorized
</span>
`;

exports[`<AuthWall> renders a spinner when loading 1`] = `<CircularLoader />`;

exports[`<AuthWall> renders errors if they occur 1`] = `
<span>
  Something went wrong
</span>
`;

exports[`<AuthWall> renders the children for authorized users 1`] = `
<Fragment>
  Children
</Fragment>
`;
